fix: mobile menus will position off screen, clipped #1068

--- a/src/main/frontend/components/editor.css
+++ b/src/main/frontend/components/editor.css
@@ -42,6 +42,14 @@
   }
 }
 
+.is-mobile {
+  .absolute-modal {
+    &.is-overflow-vw-x {
+      transform: translateX(-1%);
+    }
+  }
+}
+
 .non-block-editor textarea,
 pre {
   display: block;
